[gd_scene load_steps=4 format=2]

[ext_resource path="res://progress_bar/progress_bar.gd" type="Script" id=1]
[ext_resource path="res://fonts/upheavtt.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="ProgressBar" type="VBoxContainer"]
anchor_right = 0.212
anchor_bottom = 0.719
margin_right = 0.47998
margin_bottom = -0.26001
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="MaxProgressLabel" type="Label" parent="."]
margin_right = 203.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "12"
align = 1

[node name="Bar" type="Control" parent="."]
margin_top = 62.0
margin_right = 203.0
margin_bottom = 387.0
size_flags_vertical = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Empty" type="ColorRect" parent="Bar"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.337255, 0.337255, 0.337255, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Filled" type="ColorRect" parent="Bar"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.835294, 0.764706, 0.164706, 1 )

[node name="ProgressLabel" type="Label" parent="Bar"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -65.0
custom_fonts/font = SubResource( 1 )
text = "12"
align = 1

[node name="Tween" type="Tween" parent="."]

[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
